# course-generation

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.sample  Dockerfile  filter_logs.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  security.py
backend/app/models/: course.py  course_generation.py  user.py
backend/app/routers/: course_generation.py  health.py  projects.py  users.py
backend/app/services/: auth_service.py  course_generation_service.py  course_service.py  user_service.py
backend/backend/: .env.example  __init__.py  main.py
backend/backend/core/: config.py  security.py
backend/backend/routers/: course_generation.py  health.py  projects.py  users.py
backend/backend/services/: auth_service.py  base_service.py  course_generation_service.py  course_service.py  document_analyser_service.py  learning_pathway_service.py  modules_generation_service.py  repository_clone_service.py  user_service.py
backend/backend/shared/: __init__.py  database.py  enums.py  models.py  utils.py
backend/backend/worker/: __init__.py  main.py  tasks.py
backend/backend/worker/agents/: config.py  s1_repo_cloner.py  s2_document_analyzer.py  s3_learning_pathway_generator.py  s4_course_generator.py
backend/backend/worker/course_content_agent/: main.py  modules.py
backend/scripts/: validate_data.py
backend/shared/: __init__.py  enums.py  models.py  utils.py
backend/worker/: main.py  tasks.py
backend/worker/course_content_agent/: main.py  models.py  modules.py  signatures.py  test.py
(+83 files in other folders)
